[project]
name = "ComfyUI"
version = "0.3.60"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic>=1.16.5",
    "av>=14.2.0",
    "chardet>=5.2.0",
    "comfyui-embedded-docs==0.2.6",
    "comfyui-frontend-package==1.26.13",
    "comfyui-workflow-templates==0.1.86",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "gitpython>=3.1.45",
    "kornia>=0.7.1",
    "matplotlib>=3.9.4",
    "matrix-nio>=0.25.2",
    "numpy>=1.25.0",
    "opencv-python-headless>=4.11.0.86",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "safetensors>=0.4.2",
    "sam-2",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "sqlalchemy>=2.0.43",
    "tokenizers>=0.13.3",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchsde>=0.2.6",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.37.2",
    "typer>=0.19.2",
    "ultralytics>=8.3.203",
    "yarl>=1.18.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2" }
